--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,5 @@
 android {
-    buildToolsVersion '25.0.0'
+    buildToolsVersion '28.0.3'
     compileSdkVersion 24
     sourceSets {
         main {
@@ -12,7 +12,7 @@ android {
             jniLibs.srcDirs = ['libs']
         }
 
-        instrumentTest.setRoot('tests')
+        androidTest.setRoot('tests')
     }
     packagingOptions {
         exclude 'META-INF/robovm/ios/robovm.xml'
@@ -20,7 +20,7 @@ android {
     defaultConfig {
         applicationId "com.rocktape.game"
         minSdkVersion 8
-        targetSdkVersion 24
+        targetSdkVersion 26
     }
 }
 
